MJ縮退マップのサポート

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,7 @@ cython_debug/
 pyvenv.cfg
 jissyukutaimap1_0_0.xlsx
 syukutaimap1_0_0.zip
+MJShrinkMap.1.2.0.json
+MJShrinkMapVer.1.2.0.zip
+mji.00601-xlsx.zip
+mji.00601.xlsx
