--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,11 @@ name = jntajis-python
 version = 0.0.1
 description = JIS converter
 long_description = file:README.md
-author = Moriyoshi Koizumi <mozo@mozo.jp>
+author = Open Collector, inc. <info@opencollector.co.jp>
 keywords = Unicode, JIS, encoding, conversion, transliteration
-license = MIT License
+license = BSD License
 classifiers =
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: BSD License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -34,7 +34,6 @@ dev =
     flake8>=3.9.*
     jinja2>=3.*
     mypy>=0.910
-    openpyxl>=3.*
 
 [options.package_data]
 * =
