Use setuptools-scm.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = jntajis-python
-version = 0.0.1
 description = JIS converter
 long_description = file:README.md
 author = Open Collector, inc. <info@opencollector.co.jp>
@@ -34,6 +33,7 @@ dev =
     flake8>=3.9.*
     jinja2>=3.*
     mypy>=0.910
+    setuptools-scm>=6.*
 
 [options.package_data]
 * =
