--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ dev =
     jinja2>=3.*
     mypy>=0.910
     setuptools-scm>=6.*
+    sphinx>=4.*
+    sphinx-rtd-theme>=0.5.*
 
 [options.package_data]
 * =
