--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ dev =
     flake8>=3.9.*
     jinja2>=3.*
     mypy>=0.910
+    pytest>=6.2.*
     setuptools-scm>=6.*
     sphinx>=4.*
     sphinx-rtd-theme>=0.5.*
