--- a/setup.cfg
+++ b/setup.cfg
@@ -17,9 +17,9 @@ zip_safe = False
 include_package_data = True
 python_requires = >= 3.8
 setup_requires =
-    setuptools
-    wheel
-    cython
+    setuptools>=38.6.0
+    wheel>=0.31.0
+    cython>=0.29.0
 install_requires =
 tests_require =
     pytest
