--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = jntajis-python
 description = JIS converter
 long_description = file:README.md
+long_description_content_type = text/markdown
 author = Open Collector, inc. <info@opencollector.co.jp>
 keywords = Unicode, JIS, encoding, conversion, transliteration
 license = BSD License
