--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,12 @@
 [metadata]
 name = jntajis-python
-description = JIS converter
+description = A fast character conversion and transliteration library based on the scheme defined for Japan National Tax Agency's corporate number system.
+url = https://github.com/opencollector/jntajis-python
 long_description = file:README.md
 long_description_content_type = text/markdown
-author = Open Collector, inc. <info@opencollector.co.jp>
-keywords = Unicode, JIS, encoding, conversion, transliteration
+author = Open Collector, inc.
+author_email = <info@opencollector.co.jp>
+keywords = Unicode, JIS, encoding, conversion, transliteration, Japanese
 license = BSD License
 classifiers =
     License :: OSI Approved :: BSD License
