--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ package_dir =
 
 [options.extras_require]
 dev =
-    black==21.7b0
+    black>=23.3
     flake8>=3.9.*
     jinja2>=3.*
     mypy>=0.910
