Skip PyPy wheel builds.

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
+    env:
+      CIBW_SKIP: pp*
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
