Run tests before the wheel build

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,15 +1,18 @@
+name: Lint source and run tests
+
 on:
-  push:
-    branches:
+  workflow_call:
 
 jobs:
-  test:
-    name: Test and lint sources
+  lint_and_test:
+    name: Lint source and run tests
     runs-on: ubuntu-latest
-    container:
-      image: python:3.11
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
 
       - name: Set up environment
         run: |
