--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,9 +1,7 @@
-name: Build
+name: Build wheels
 
 on:
-  push:
-    tags:
-      - v*
+  workflow_call:
 
 jobs:
   build_wheels:
@@ -16,13 +14,15 @@ jobs:
         os:
           - ubuntu-20.04
           - windows-2019
-          - macOS-10.15
+          - macOS-11
+          - macOS-12
+          - macOS-13
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       # Used to host cibuildwheel
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v3
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel>=2.*.*
@@ -30,6 +30,6 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
