--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
   build_wheels:
     needs:
       - lint_and_test
-    if: ${{ startsWith(github.ref, 'refs/tags/v.*') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     uses: ./.github/workflows/wheels.yml
